# evilflowers-ocr-worker

./: CHANGELOG.md  Dockerfile  README.md  ppc64le.Dockerfile  pyproject.toml  requirements.sh
.github/workflows/: docker-ppc64le.yml  docker.yml  github-publish.yml
evilflowers_ocr_worker/: __init__.py
